--- a/classProject/blockGame.html
+++ b/classProject/blockGame.html
@@ -9,11 +9,15 @@
     <header>
         <h1></h1>
         <nav>
-            <a href="./blockGame.html">Block Game</a>
+            <a href="./index.html">Home</a>
             <a href="./quakeData.html">EarthQuake Data</a>
         </nav>
+        <h3>Score: <span>0</span></h3>
     </header>
-    <main></main>
+    <main>
+        <button onclick="startGame()">Start Game</button>
+        <!-- https://codepen.io/WolfsVeteran/pen/dyQdVLo -->
+    </main>
     <footer></footer>
 </body>
 </html>
