--- a/classProject/quakeData.html
+++ b/classProject/quakeData.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>July/Aug 2023 Web Fun Class Project</title>
 </head>
 <body>
@@ -10,10 +11,13 @@
         <h1></h1>
         <nav>
             <a href="./blockGame.html">Block Game</a>
-            <a href="./quakeData.html">EarthQuake Data</a>
+            <a href="./index.html">Home</a>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <img src="./images/theWorld.jpeg" alt="World Map" class="worldImg">
+        <button onclick="plotData()"  class="worldButton">Plot Data</button>
+    </main>
     <footer></footer>
 </body>
 </html>
