--- a/lectures/week4/Day1/index.html
+++ b/lectures/week4/Day1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/popup.css">
     <title>DOM</title>
 </head>
 <body>
@@ -22,6 +23,9 @@
         </nav>
     </header>
     <main>
+        <div id="hiddenDanger">
+            
+        </div>
         <!-- form/alert show an alert with the city selected -->
         <form name="alertForm">
             <label for="city">Chose City</label>
@@ -40,30 +44,40 @@
             <div class="sticker">
                 <img src="http://images.craftsnherbs.com/stickers/aiBrain.png" alt="AI Brain Sticker">
                 <p id="s01">0</p>
-                <button>Like</button>
+                <button onclick="likes('s01')">Like</button>
             </div>
             <div class="sticker">
                 <img src="http://images.craftsnherbs.com/stickers/404Error.png" alt="404 Error Sticker">
                 <p id="s02">2</p>
-                <button>Like</button>
+                <button onclick="likes('s02')">Like</button>
             </div>
             <div class="sticker">
                 <img src="./images/DSCN1146.JPG" alt="Sticker">
                 <p id="s03">40</p>
-                <button>Like</button>
+                <button onclick="likes('s03')">Like</button>
             </div>
             <div class="sticker">
                 <img src="./images/DSCN1147.JPG" alt="Sticker">
                 <p id="s04">20</p>
-                <button>Like</button>
+                <button onclick="likes('s04')">Like</button>
             </div>
         </div>
         <!-- Insert a picture and some text -->
+        <button onclick="addImg()">Add Image</button>
         <div id="imgText"></div>
     </main>
+    <div class="cookie" id="cookie">
+        <p>This site uses cookies to track where folks are coming from.  Please click allow cookies so we can see how far around the world we are getting.</p>
+        <div class="row">
+            <!-- shows pop up modal -->
+            <button id="denied" onclick="denied()">Don't accept</button>
+            <button id="accept" onclick="acceptCookie()">Accept all</button>
+        </div>
+    </div>
     <footer>
         <p>Created by July/Aug 2023 Flex Cohort </p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
