--- a/classProject/blockGame.html
+++ b/classProject/blockGame.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>July/Aug 2023 Web Fun Class Project</title>
 </head>
 <body>
@@ -16,7 +17,8 @@
     </header>
     <main>
         <button onclick="startGame()">Start Game</button>
-        <!-- https://codepen.io/WolfsVeteran/pen/dyQdVLo -->
+        <!-- https://codepen.io/WolfsVeteran/pen/dyQgxJB -->
+        <div class="box"></div>
     </main>
     <footer></footer>
 </body>
