--- a/classProject/quakeData.html
+++ b/classProject/quakeData.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>July/Aug 2023 Web Fun Class Project</title>
 </head>
-<body>
+<body style="background-image: url('./images/theWorld.jpeg'); background-repeat: no-repeat;">
     <header>
         <h1></h1>
         <nav>
@@ -15,9 +15,12 @@
         </nav>
     </header>
     <main>
-        <img src="./images/theWorld.jpeg" alt="World Map" class="worldImg">
+        <!-- <img src="./images/theWorld.jpeg" alt="World Map" class="worldImg"> -->
+        <div id="grid"></div>
         <button onclick="plotData()"  class="worldButton">Plot Data</button>
     </main>
     <footer></footer>
+    <!-- <script src="./js/worldMap.js"></script> -->
+    <script src="./js/script.js"></script>
 </body>
 </html>
