--- a/classProject/blockGame.html
+++ b/classProject/blockGame.html
@@ -18,9 +18,13 @@
     <main>
         <button onclick="startGame()">Start Game</button>
         <!-- https://codepen.io/WolfsVeteran/pen/dyQgxJB -->
-        <div class="box"></div>
+        <!-- <div class="box next"></div> -->
+        <img src="./images/box.png" alt="" class="next">
+        <div class="box" id="box">
+        </div>
     </main>
     <footer></footer>
+    <script src="./js/script.js"></script>
 </body>
 </html>
 
