--- a/classProject/quakeData.html
+++ b/classProject/quakeData.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>July/Aug 2023 Web Fun Class Project</title>
 </head>
-<body style="background-image: url('./images/theWorld.jpeg'); background-repeat: no-repeat;">
+<body>
     <header>
         <h1></h1>
         <nav>
@@ -16,7 +16,7 @@
     </header>
     <main>
         <!-- <img src="./images/theWorld.jpeg" alt="World Map" class="worldImg"> -->
-        <div id="grid"></div>
+        <div id="grid"  style="background-image: url('./images/theWorld02.jpg'); background-repeat: no-repeat; background-size: contain; width:1200px;"></div>
         <button onclick="plotData()"  class="worldButton">Plot Data</button>
     </main>
     <footer></footer>
