--- a/lectures/week7/Day02/index.html
+++ b/lectures/week7/Day02/index.html
@@ -3,52 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/script01.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <h1>Testing</h1>
-        <nav>
-            <button class="btn btn-outline-info"><a href="">I am a link</a></button><button><a href="">I am a link</a></button><button><a href="">I am a link</a></button><button><a href="">I am a link</a></button><button><a href="">I am a link</a></button><button><a href="">I am a link</a></button>
+        <h1>Hello Everyone</h1>
+        <button id="showMe">Show Nav</button>
+        <nav id="hideMe">
+            <a href="#">About</a>
+            <a href="#">Home</a>
+            <a href="#">Contact</a>
+            <button id="rehide">Hide Me Again</button>
         </nav>
     </header>
-    <div class="row">
-        <!-- <img src="./images/DSCN1100.JPG" alt=""><img src="./images/DSCN1102.JPG" alt=""><img src="./images/DSCN1146.JPG" alt=""><img src="./images/DSCN1147.JPG" alt=""><img src="./images/DSCN1154.JPG" alt=""><img src="./images/DSCN1159.JPG" alt=""> -->
-        <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-          <form>
-            <div>
-              <label for="exampleInputEmail1" >Email address</label>
-              <input type="email" >
-              <div id="emailHelp" >We'll never share your email with anyone else.</div>
-            </div>
-            <div>
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" >
-            </div>
-            <div>
-              <input type="checkbox">
-              <label for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" >Submit</button>
-          </form>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <main>
+        <button id="imgReturn">Bring the Image Back</button>
+        <img src="./images/DSCN1100.JPG" alt="Error" id="img">
+        <button id="tvBox">TV Box Hide</button>
+        <div class="div"></div>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
